// Copyright 2025 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package google.cloud.cloudsecuritycompliance.v1;

import "google/api/field_behavior.proto";
import "google/api/resource.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "Google.Cloud.CloudSecurityCompliance.V1";
option go_package = "cloud.google.com/go/cloudsecuritycompliance/apiv1/cloudsecuritycompliancepb;cloudsecuritycompliancepb";
option java_multiple_files = true;
option java_outer_classname = "CommonProto";
option java_package = "com.google.cloud.cloudsecuritycompliance.v1";
option php_namespace = "Google\\Cloud\\CloudSecurityCompliance\\V1";
option ruby_package = "Google::Cloud::CloudSecurityCompliance::V1";
option (google.api.resource_definition) = {
  type: "cloudsecuritycompliance.googleapis.com/OrganizationLocation"
  pattern: "organizations/{organization}/locations/{location}"
};

// The enforcement mode of the cloud control.
enum EnforcementMode {
  // Default value. This value is unused.
  ENFORCEMENT_MODE_UNSPECIFIED = 0;

  // The cloud control is enforced to prevent resource non-compliance.
  PREVENTIVE = 1;

  // The cloud control is enforced to detect resource non-compliance.
  DETECTIVE = 2;

  // The cloud control is enforced to audit resource non-compliance.
  AUDIT = 3;
}

// The category of the framework.
enum FrameworkCategory {
  // Default value. This value is unused.
  FRAMEWORK_CATEGORY_UNSPECIFIED = 0;

  // Standard framework
  INDUSTRY_DEFINED_STANDARD = 1;

  // Assured Workloads framework
  ASSURED_WORKLOADS = 2;

  // Data Security framework
  DATA_SECURITY = 3;

  // Google Best Practices framework
  GOOGLE_BEST_PRACTICES = 4;

  // User created framework.
  CUSTOM_FRAMEWORK = 5;
}

// The category of the cloud control.
enum CloudControlCategory {
  // Default value. This value is unused.
  CLOUD_CONTROL_CATEGORY_UNSPECIFIED = 0;

  // Infrastructure
  CC_CATEGORY_INFRASTRUCTURE = 1;

  // Artificial Intelligence
  CC_CATEGORY_ARTIFICIAL_INTELLIGENCE = 2;

  // Physical Security
  CC_CATEGORY_PHYSICAL_SECURITY = 3;

  // Data Security
  CC_CATEGORY_DATA_SECURITY = 4;

  // Network Security
  CC_CATEGORY_NETWORK_SECURITY = 5;

  // Incident Management
  CC_CATEGORY_INCIDENT_MANAGEMENT = 6;

  // Identity & Access Management
  CC_CATEGORY_IDENTITY_AND_ACCESS_MANAGEMENT = 7;

  // Encryption
  CC_CATEGORY_ENCRYPTION = 8;

  // Logs Management & Infrastructure
  CC_CATEGORY_LOGS_MANAGEMENT_AND_INFRASTRUCTURE = 9;

  // HR, Admin & Processes
  CC_CATEGORY_HR_ADMIN_AND_PROCESSES = 10;

  // Third Party & Sub-Processor Management
  CC_CATEGORY_THIRD_PARTY_AND_SUB_PROCESSOR_MANAGEMENT = 11;

  // Legal & Disclosures
  CC_CATEGORY_LEGAL_AND_DISCLOSURES = 12;

  // Vulnerability Management
  CC_CATEGORY_VULNERABILITY_MANAGEMENT = 13;

  // Privacy
  CC_CATEGORY_PRIVACY = 14;

  // BCDR (Business Continuity and Disaster Recovery)
  CC_CATEGORY_BCDR = 15;
}

// The cloud platform.
enum CloudProvider {
  // Default value. This value is unused.
  CLOUD_PROVIDER_UNSPECIFIED = 0;

  // Amazon Web Services (AWS).
  AWS = 1;

  // Microsoft Azure.
  AZURE = 2;

  // Google Cloud.
  GCP = 3;
}

// The severity of the finding.
enum Severity {
  // This value is used for findings when a source doesn't write a severity
  // value.
  SEVERITY_UNSPECIFIED = 0;

  // Vulnerability:
  // A critical vulnerability is easily discoverable by an external actor,
  // exploitable, and results in the direct ability to execute arbitrary code,
  // exfiltrate data, and otherwise gain additional access and privileges to
  // cloud resources and workloads. Examples include publicly accessible
  // unprotected user data and public SSH access with weak or no
  // passwords.
  //
  // Threat:
  // Indicates a threat that is able to access, modify, or delete data or
  // execute unauthorized code within existing resources.
  CRITICAL = 1;

  // Vulnerability:
  // A high risk vulnerability can be easily discovered and exploited in
  // combination with other vulnerabilities in order to gain direct access and
  // the ability to execute arbitrary code, exfiltrate data, and otherwise
  // gain additional access and privileges to cloud resources and workloads.
  // An example is a database with weak or no passwords that is only
  // accessible internally. This database could easily be compromised by an
  // actor that had access to the internal network.
  //
  // Threat:
  // Indicates a threat that is able to create new computational resources in
  // an environment but not able to access data or execute code in existing
  // resources.
  HIGH = 2;

  // Vulnerability:
  // A medium risk vulnerability could be used by an actor to gain access to
  // resources or privileges that enable them to eventually (through multiple
  // steps or a complex exploit) gain access and the ability to execute
  // arbitrary code or exfiltrate data. An example is a service account with
  // access to more projects than it should have. If an actor gains access to
  // the service account, they could potentially use that access to manipulate
  // a project the service account was not intended to.
  //
  // Threat:
  // Indicates a threat that is able to cause operational impact but may not
  // access data or execute unauthorized code.
  MEDIUM = 3;

  // Vulnerability:
  // A low risk vulnerability hampers a security organization's ability to
  // detect vulnerabilities or active threats in their deployment, or prevents
  // the root cause investigation of security issues. An example is monitoring
  // and logs being disabled for resource configurations and access.
  //
  // Threat:
  // Indicates a threat that has obtained minimal access to an environment but
  // is not able to access data, execute code, or create resources.
  LOW = 4;
}

// The action type of the rule.
enum RuleActionType {
  // Default value. This value is unused.
  RULE_ACTION_TYPE_UNSPECIFIED = 0;

  // Preventative action type.
  RULE_ACTION_TYPE_PREVENTIVE = 1;

  // Detective action type.
  RULE_ACTION_TYPE_DETECTIVE = 2;

  // Audit action type.
  RULE_ACTION_TYPE_AUDIT = 3;
}

// TargetResourceType represents the type of resource that a control or
// framework can be applied to.
enum TargetResourceType {
  // Default value. This value is unused.
  TARGET_RESOURCE_TYPE_UNSPECIFIED = 0;

  // Target resource is an Organization.
  TARGET_RESOURCE_CRM_TYPE_ORG = 1;

  // Target resource is a Folder.
  TARGET_RESOURCE_CRM_TYPE_FOLDER = 2;

  // Target resource is a Project.
  TARGET_RESOURCE_CRM_TYPE_PROJECT = 3;

  // Target resource is an Application.
  TARGET_RESOURCE_TYPE_APPLICATION = 4;
}

// A Framework is a collection of CloudControls to address security and
// compliance requirements. Frameworks can be used for prevention, detection,
// and auditing. They can be either built-in, industry-standard frameworks
// provided by GCP/AZURE/AWS (e.g., NIST, FedRAMP) or custom frameworks created
// by users.
message Framework {
  option (google.api.resource) = {
    type: "cloudsecuritycompliance.googleapis.com/Framework"
    pattern: "organizations/{organization}/locations/{location}/frameworks/{framework}"
    plural: "frameworks"
    singular: "framework"
  };

  // The type of the framework.
  enum FrameworkType {
    // Default value. This value is unused.
    FRAMEWORK_TYPE_UNSPECIFIED = 0;

    // The framework is a built-in framework if it is created and managed by
    // GCP.
    BUILT_IN = 1;

    // The framework is a custom framework if it is created and managed by the
    // user.
    CUSTOM = 2;
  }

  // Required. Identifier. The name of the framework.
  // Format:
  // organizations/{organization}/locations/{location}/frameworks/{framework_id}
  string name = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.field_behavior) = IDENTIFIER
  ];

  // Output only. Major revision of the framework incremented in ascending
  // order.
  int64 major_revision_id = 2 [(google.api.field_behavior) = OUTPUT_ONLY];

  // Optional. Display name of the framework. The maximum length is 200
  // characters.
  string display_name = 4 [(google.api.field_behavior) = OPTIONAL];

  // Optional. The description of the framework. The maximum length is 2000
  // characters.
  string description = 5 [(google.api.field_behavior) = OPTIONAL];

  // Output only. The type of the framework. The default is TYPE_CUSTOM.
  FrameworkType type = 6 [(google.api.field_behavior) = OUTPUT_ONLY];

  // Optional. The details of the cloud controls directly added without any
  // grouping in the framework.
  repeated CloudControlDetails cloud_control_details = 8
      [(google.api.field_behavior) = OPTIONAL];

  // Optional. The category of the framework.
  repeated FrameworkCategory category = 9
      [(google.api.field_behavior) = OPTIONAL];

  // Output only. cloud providers supported
  repeated CloudProvider supported_cloud_providers = 10
      [(google.api.field_behavior) = OUTPUT_ONLY];

  // Output only. target resource types supported by the Framework.
  repeated TargetResourceType supported_target_resource_types = 11
      [(google.api.field_behavior) = OUTPUT_ONLY];

  // Output only. The supported enforcement modes of the framework.
  repeated EnforcementMode supported_enforcement_modes = 13
      [(google.api.field_behavior) = OUTPUT_ONLY];
}

// CloudControlDetails contains the details of a CloudControl.
message CloudControlDetails {
  // Required. The name of the CloudControl in the format:
  // “organizations/{organization}/locations/{location}/
  // cloudControls/{cloud-control}”
  string name = 1 [(google.api.field_behavior) = REQUIRED];

  // Required. Major revision of cloudcontrol
  int64 major_revision_id = 2 [(google.api.field_behavior) = REQUIRED];

  // Optional. Parameters is a key-value pair that is required by the
  // CloudControl. The specification of these parameters will be present in
  // cloudcontrol.Eg: { "name": "location","value": "us-west-1"}.
  repeated Parameter parameters = 4 [(google.api.field_behavior) = OPTIONAL];
}

// FrameworkReference contains the reference of a framework.
message FrameworkReference {
  // Required. In the format:
  // organizations/{org}/locations/{location}/frameworks/{framework}
  string framework = 1 [(google.api.field_behavior) = REQUIRED];

  // Optional. Major revision id of the framework. If not specified, corresponds
  // to the latest revision of the framework.
  optional int64 major_revision_id = 2 [(google.api.field_behavior) = OPTIONAL];
}

// Parameters is a key-value pair.
message Parameter {
  // Required. The name of the parameter.
  string name = 1 [(google.api.field_behavior) = REQUIRED];

  // Required. The value of the parameter
  ParamValue parameter_value = 2 [(google.api.field_behavior) = REQUIRED];
}

// A CloudControl is the fundamental unit encapsulating the rules
// to meet a specific security or compliance intent. It can contain
// various rule types (like Organization Policies, CEL expressions, etc.)
// enabling different enforcement modes (Preventive, Detective, Audit).
// CloudControls are often parameterized for reusability and can be either
// BUILT_IN (provided by Google) or CUSTOM (defined by the user).
message CloudControl {
  option (google.api.resource) = {
    type: "cloudsecuritycompliance.googleapis.com/CloudControl"
    pattern: "organizations/{organization}/locations/{location}/cloudControls/{cloud_control}"
    plural: "cloudControls"
    singular: "cloudControl"
  };

  // Required. Identifier. The resource name of the cloud control.
  // Format:
  // organizations/{organization}/locations/{location}/cloudControls/{cloud_control_id}
  string name = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.field_behavior) = IDENTIFIER
  ];

  // Output only. Major revision of the cloud control incremented in ascending
  // order.
  int64 major_revision_id = 2 [(google.api.field_behavior) = OUTPUT_ONLY];

  // Optional. A description of the cloud control. The maximum length is 2000
  // characters.
  string description = 4 [(google.api.field_behavior) = OPTIONAL];

  // Optional. The display name of the cloud control. The maximum length is 200
  // characters.
  string display_name = 5 [(google.api.field_behavior) = OPTIONAL];

  // Output only. The supported enforcement mode of the cloud control. Default
  // is DETECTIVE.
  repeated EnforcementMode supported_enforcement_modes = 7
      [(google.api.field_behavior) = OUTPUT_ONLY];

  // Optional. The parameter spec of the cloud control.
  repeated ParameterSpec parameter_spec = 8
      [(google.api.field_behavior) = OPTIONAL];

  // Optional. The Policy to be enforced to prevent/detect resource
  // non-compliance.
  repeated Rule rules = 9 [(google.api.field_behavior) = OPTIONAL];

  // Optional. The severity of findings generated by the cloud control.
  Severity severity = 11 [(google.api.field_behavior) = OPTIONAL];

  // Optional. The finding_category of the cloud control. The maximum length is
  // 255 characters.
  string finding_category = 12 [(google.api.field_behavior) = OPTIONAL];

  // Optional. cloud providers supported
  repeated CloudProvider supported_cloud_providers = 13
      [(google.api.field_behavior) = OPTIONAL];

  // Output only. The Frameworks that include this CloudControl
  repeated string related_frameworks = 14
      [(google.api.field_behavior) = OUTPUT_ONLY];

  // Optional. The remediation steps for the findings generated by the cloud
  // control. The maximum length is 400 characters.
  string remediation_steps = 15 [(google.api.field_behavior) = OPTIONAL];

  // Optional. The categories of the cloud control.
  repeated CloudControlCategory categories = 16
      [(google.api.field_behavior) = OPTIONAL];

  // Output only. The last updated time of the cloud control.
  // The create_time is used because a new CC is created whenever we update an
  // existing CC.
  google.protobuf.Timestamp create_time = 17
      [(google.api.field_behavior) = OUTPUT_ONLY];

  // Optional. target resource types supported by the CloudControl.
  repeated TargetResourceType supported_target_resource_types = 18
      [(google.api.field_behavior) = OPTIONAL];
}

// A parameter spec of the cloud control.
message ParameterSpec {
  // The type of the parameter value.
  enum ValueType {
    // Default value. This value is unused.
    VALUE_TYPE_UNSPECIFIED = 0;

    // String value.
    STRING = 3;

    // Boolean value.
    BOOLEAN = 4;

    // String list value.
    STRINGLIST = 5;

    // Numeric value.
    NUMBER = 6;

    // OneOf value.
    ONEOF = 7;
  }

  // Required. The name of the parameter.
  string name = 1 [(google.api.field_behavior) = REQUIRED];

  // Optional. The display name of the parameter. The maximum length is 200
  // characters.
  string display_name = 2 [(google.api.field_behavior) = OPTIONAL];

  // Optional. The description of the parameter. The maximum length is 2000
  // characters.
  string description = 3 [(google.api.field_behavior) = OPTIONAL];

  // Required. if the parameter is required
  bool is_required = 4 [(google.api.field_behavior) = REQUIRED];

  // Required. Parameter value type.
  ValueType value_type = 5 [(google.api.field_behavior) = REQUIRED];

  // Optional. The default value of the parameter.
  ParamValue default_value = 6 [(google.api.field_behavior) = OPTIONAL];

  // Optional. List of parameter substitutions.
  repeated ParameterSubstitutionRule substitution_rules = 7
      [(google.api.field_behavior) = OPTIONAL];

  // Optional. ParameterSpec for oneof attributes.
  repeated ParameterSpec sub_parameters = 8
      [(google.api.field_behavior) = OPTIONAL];

  // Optional. The allowed set of values for the parameter.
  Validation validation = 9 [(google.api.field_behavior) = OPTIONAL];
}

// Validation of the parameter.
message Validation {
  // Defines validators for parameter values.
  oneof constraint {
    // Allowed set of values for the parameter.
    AllowedValues allowed_values = 1;

    // Allowed range for numeric parameters.
    IntRange int_range = 2;

    // Regular expression for string parameters.
    RegexpPattern regexp_pattern = 3;
  }
}

// Allowed set of values for the parameter.
message AllowedValues {
  // Required. List of allowed values for the parameter.
  repeated ParamValue values = 1 [(google.api.field_behavior) = REQUIRED];
}

// Regular Expression Validator for parameter values.
message RegexpPattern {
  // Required. Regex Pattern to match the value(s) of parameter.
  string pattern = 1 [(google.api.field_behavior) = REQUIRED];
}

// Number range for number parameters.
message IntRange {
  // Required. Minimum allowed value for the numeric parameter (inclusive).
  int64 min = 1 [(google.api.field_behavior) = REQUIRED];

  // Required. Maximum allowed value for the numeric parameter (inclusive).
  int64 max = 2 [(google.api.field_behavior) = REQUIRED];
}

// A list of strings.
message StringList {
  // Required. The strings in the list.
  repeated string values = 1 [(google.api.field_behavior) = REQUIRED];
}

// Possible parameter value types.
message ParamValue {
  // The kind of value.
  oneof kind {
    // Represents a string value.
    string string_value = 3;

    // Represents a boolean value.
    bool bool_value = 4;

    // Represents a repeated string.
    StringList string_list_value = 5;

    // Represents a double value.
    double number_value = 6;

    // Represents sub-parameter values.
    Parameter oneof_value = 7;
  }
}

// Parameter substitution rules.
message ParameterSubstitutionRule {
  // The type of substitution.
  oneof substitution_type {
    // Placeholder substitution rule.
    PlaceholderSubstitutionRule placeholder_substitution_rule = 1;

    // Attribute substitution rule.
    AttributeSubstitutionRule attribute_substitution_rule = 2;
  }
}

// Attribute at the given path is substituted entirely.
message AttributeSubstitutionRule {
  // Fully qualified proto attribute path (in dot notation).
  // Example: rules[0].cel_expression.resource_types_values
  string attribute = 1;
}

// Placeholder is substituted in the rendered string.
message PlaceholderSubstitutionRule {
  // Fully qualified proto attribute path (e.g., dot notation)
  string attribute = 1;
}

// A rule of the cloud control.
message Rule {
  // The implementation of the rule.
  oneof implementation {
    // Logic expression in CEL language.
    CELExpression cel_expression = 1;
  }

  // Optional. Description of the Rule. The maximum length is 2000 characters.
  string description = 10 [(google.api.field_behavior) = OPTIONAL];

  // Required. The functionality enabled by the Rule.
  repeated RuleActionType rule_action_types = 16
      [(google.api.field_behavior) = REQUIRED];
}

// A [CEL
// expression](https://cloud.google.com/certificate-authority-service/docs/using-cel).
message CELExpression {
  // The criteria of the CEL expression.
  oneof criteria {
    // The resource instance types on which this expression is defined.
    // Format will be of the form : `<canonical service name>/<type>`
    // Example: `compute.googleapis.com/Instance`.
    StringList resource_types_values = 3;
  }

  // Required. Logic expression in CEL language.
  // The max length of the condition is 1000 characters.
  string expression = 1 [(google.api.field_behavior) = REQUIRED];
}

// Represents the metadata of the long-running operation.
message OperationMetadata {
  // Output only. The time the operation was created.
  google.protobuf.Timestamp create_time = 1
      [(google.api.field_behavior) = OUTPUT_ONLY];

  // Output only. The time the operation finished running.
  google.protobuf.Timestamp end_time = 2
      [(google.api.field_behavior) = OUTPUT_ONLY];

  // Output only. Server-defined resource path for the target of the operation.
  string target = 3 [(google.api.field_behavior) = OUTPUT_ONLY];

  // Output only. Name of the verb executed by the operation.
  string verb = 4 [(google.api.field_behavior) = OUTPUT_ONLY];

  // Output only. Human-readable status of the operation, if any.
  string status_message = 5 [(google.api.field_behavior) = OUTPUT_ONLY];

  // Output only. Identifies whether the user has requested cancellation
  // of the operation. Operations that have been cancelled successfully
  // have [Operation.error][] value with a
  // [google.rpc.Status.code][google.rpc.Status.code] of 1, corresponding to
  // `Code.CANCELLED`.
  bool requested_cancellation = 6 [(google.api.field_behavior) = OUTPUT_ONLY];

  // Output only. API version used to start the operation.
  string api_version = 7 [(google.api.field_behavior) = OUTPUT_ONLY];
}
